<resources>
    <string name="app_name">GetFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_medidor_tiempo">Cronómetro</string>
    <string name="menu_ejercicios">Ejercicios</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_rutina">Rutina</string>
    <string name="menu_recetas">Recetas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>