<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@raw/home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_mi_perfil"
            android:icon="@raw/usuario"
            android:title="@string/menu_mi_perfil" />
        <item
            android:id="@+id/nav_cronometro"
            android:icon="@raw/chronometer"
            android:title="@string/menu_medidor_tiempo" />
        <item
            android:id="@+id/nav_recetas"
            android:icon="@raw/food"
            android:title="@string/menu_recetas" />
        <item
            android:id="@+id/nav_ejercicios"
            android:icon="@raw/fitness"
            android:title="@string/menu_ejercicios" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@raw/calendar"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_rutina"
            android:icon="@raw/routine"
            android:title="@string/menu_rutina" />
    </group>
</menu>