<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.project.getfit.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_cronometro"
        android:name="com.project.getfit.ui.medidor_tiempo.MedidorTiempoFragment"
        android:label="@string/menu_medidor_tiempo"
        tools:layout="@layout/fragment_medidor_tiempo" />

    <fragment
        android:id="@+id/nav_ejercicios"
        android:name="com.project.getfit.ui.ejercicios.EjerciciosFragment"
        android:label="@string/menu_ejercicios"
        tools:layout="@layout/fragment_ejercicios" />

    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.project.getfit.ui.calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/nav_rutina"
        android:name="com.project.getfit.ui.rutina.RutinaFragment"
        android:label="@string/menu_rutina"
        tools:layout="@layout/fragment_rutina" >

    </fragment>

    <fragment
        android:id="@+id/nav_recetas"
        android:name="com.project.getfit.ui.recetas.RecetasFragment"
        android:label="@string/menu_recetas"
        tools:layout="@layout/fragment_recetas" />

    <fragment
        android:id="@+id/nav_mi_perfil"
        android:name="com.project.getfit.ui.mi_perfil.MiPerfilFragment"
        android:label="@string/menu_mi_perfil"
        tools:layout="@layout/fragment_mi_perfil" />
</navigation>